--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,7 @@ function toggleBibtex(articleid) {
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="service.html">Service</a></div>
+<div class="menu-item"><a href="cool_robots.html">Cool Robots</a></div>
 <!-- <div class="menu-item"><a href="pdfs/Lifeng_CV.pdf">CV</a></div> -->
 <div class="menu-category">Contact</div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/lifeng-zhou-18135aa6/">Linkedin</a></div>
@@ -57,7 +58,7 @@ function toggleBibtex(articleid) {
 </li>
 
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (TRO)</i>. Note: submitted.  
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (TRO)</i>. Note: submitted. <a href="pdfs/TRO20_risk.pdf">[PDF]</a>
 </p>
 </li>
 
@@ -238,7 +239,7 @@ year = {2019},
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-08, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-23, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
