--- a/service.html
+++ b/service.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="service.html">Service</a></div>
+<div class="menu-item"><a href="cool_robots.html">Cool Robots</a></div>
 <div class="menu-category">Contact</div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/lifeng-zhou-18135aa6/">Linkedin</a></div>
 <div class="menu-item"><a href="https://twitter.com/Lifeng917">Twitter</a></div>
