--- a/research.html
+++ b/research.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="service.html">Service</a></div>
+<div class="menu-item"><a href="cool_robots.html">Cool Robots</a></div>
 <!-- <div class="menu-item"><a href="pdfs/Lifeng_CV.pdf">CV</a></div> -->
 <div class="menu-category">Contact</div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/lifeng-zhou-18135aa6/">Linkedin</a></div>
@@ -30,22 +31,23 @@
 <p>
 My research focuses on enabling <b> security, trustworthiness, and long-term autonomy </b> in robotics and autonomous systems. When performing long-term tasks, robots need to deal with uncertain, changing environmental conditions. Robots may fail or if they are operating in adversarial environments, they may get attacked. To overcome these challenges,  I devise efficient coordination algorithms with rigorous theoretical guarantees to make robots resilient to attacks and aware of the loss from uncertainty. My long-term goal is to investigate multi-robot security and trustworthy autonomy when they use data-driven machine learning techniques. I am especially interested in how multi-robot planning and coordination can help alleviate issues related to adversarial perturbations and uncertain extraction in the state-of-the-art  deep learning models. </p>
 <!-- My vision is to enable long-term deployments of robots performing tasks in real-world. Here, the robots have to deal with uncertain knowledge of the environment. The environment itself may be changing. Robots may fail or if they are operating in adversarial environments, they may get attacked. My goal is to devise algorithms to make the robots resilient to failure and be aware of the loss from uncertainty. To do that, the robots may have to communicate with each other to replan. I will specifically focus on strategies that are selective in who the robots communicate with and when to communicate.  -->
-<h2>Countering Attacks through Resilient Coordination</h2>
-<img src="photos/uav_target.png" width="260", hspace="90"></img><img src="photos/tra_cover.png" width="280"></img>
+<h2>Countering Attacks and Failures through Resilient Coordination</h2>
+<!-- <img src="photos/uav_target.png" width="260", hspace="90"></img><img src="photos/tra_cover.png" width="280"></img> -->
 <br>
 <iframe width="410" height="200" src="https://www.youtube.com/embed/0pGrg514_eg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe> <iframe width="410" height="200" src="https://www.youtube.com/embed/T0Hb0UURCLM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- 430*242 -->
+</iframe> <iframe width="380" height="200" src="https://www.youtube.com/embed/T0Hb0UURCLM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- 430*242 -->
+</iframe> <iframe width="360" height="200" src="https://youtube.com/embed/hKOrFYUVjlo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 <br>
 <p>The problem of target tracking with multiple robots consists of actively planning the motion of robots to track targets. A major challenge for practical deployments is to make the robots resilient to failures. In particular, robots may be attacked in adversarial scenarios, or their sensors may fail or get occluded. Here, we introduce planning algorithms for multi-target tracking that are resilient to such failures. In general, resilient target tracking is computationally hard. Contrary to the case where there are no failures, no scalable approximation algorithms are known for resilient target tracking when the targets are indistinguishable, or unknown in number, or with unknown motion model.
 <br />
 <br>
-We provide both centralized and distributed resilient algorithms to counter such failures/attacks. Our algorithms have the following properties: First, they achieve maximal resiliency, since the algorithms are valid for any number of failures. Second, the centralized resilient algorithm runs as fast as the standard greedy algorithm, and the distributed resilient algorithm runs even faster. Third, they provide provable approximation bounds on the tracking performance. We quantify our algorithms' approximation performance using a novel notion of curvature for monotone set functions subject to matroid constraints. Finally, we demonstrate the efficacy of our algorithms through MATLAB and Gazebo simulations.
-<br />[<a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;><i>RA-L+ICRA'19</i></a>] [<a href="pdfs/dis_robust.pdf" target=&ldquo;blank&rdquo;><i>ICRA'20</i></a>]<!--[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]--></p>
+We provide both centralized and distributed resilient algorithms to counter such failures/attacks. Our algorithms have the following properties: First, they achieve maximal resiliency, since the algorithms are valid for any number of failures. Second, the centralized resilient algorithm runs as fast as the standard greedy algorithm, and the distributed resilient algorithm runs even faster. Third, they provide provable approximation bounds on the tracking performance. 
+<br />[<a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;><i>RA-L+ICRA'19</i></a>] [<a href="pdfs/dis_robust.pdf" target=&ldquo;blank&rdquo;><i>ICRA'20</i></a>] [<a href="pdfs/IROS20_resilient.pdf" target=&ldquo;blank&rdquo;><i>IROS'20 submitted</i></a>]<!--[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]--></p>
 <h2>Managing Risk through Stochastic Submodular Optimization</h2>
-<img src="photos/simple_mod_exp.png" width="400"></img>
+<img src="photos/simple_mod_exp.png" width="400"></img> <img src="photos/street_risk.png" width="220" hspace="40"></img>
 <br>
 <p>We study the problem of incorporating risk while making combinatorial decisions under uncertainty. We formulate a discrete submodular maximization problem for selecting a set using Conditional-Value-at-Risk (CVaR), a risk metric commonly used in financial analysis. While CVaR has recently been used in optimization of linear cost functions in robotics, we take the first stages towards extending this to discrete submodular optimization and provide several positive results. Specifically, we propose the Sequential Greedy Algorithm that provides an approximation guarantee on finding the maxima of the CVaR cost function under a matroidal constraint. The approximation guarantee shows that the solution produced by our algorithm is within a constant factor of the optimal and an additive term that depends on the optimal. Our analysis uses the curvature of the submodular set function, and proves that the algorithm runs in polynomial time. This formulates a number of combinatorial optimization problems that appear in robotics. We use two such problems, vehicle assignment under uncertainty for mobility-on-demand and sensor selection with failures for environmental monitoring, as case studies to demonstrate the efficacy of our formulation.
-<br />[<a href="pdfs/WAFR_risk.pdf" target=&ldquo;blank&rdquo;><i>WAFR'18</i></a>]
+<br />[<a href="pdfs/WAFR_risk.pdf" target=&ldquo;blank&rdquo;><i>WAFR'18</i></a>][<a href="pdfs/TRO20_risk.pdf" target=&ldquo;blank&rdquo;><i>T-RO submitted</i></a>]
 <h2>Reducing Communication by Self-Triggered Control</h2>
 <iframe width="410" height="200" src="https://www.youtube.com/embed/HO2dRSLk-Vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="410" height="200" src="https://www.youtube.com/embed/UcsRCc9cfns" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -84,11 +86,11 @@ We model this problem as a discrete, sequential, two-player, zero-sum game. We u
 <br>
 Abstract—We study the problem of designing spoofing signals to corrupt and mislead the output of a Kalman filter. Unlike existing works that focus on detection and filtering algorithms for the observer, we study the problem from the attacker’s point-of-view. In our model, the attacker can corrupt the measurements by adding spoofing signals. The attacker seeks to create a separation between the estimate of the Kalman filter with and without spoofing signals. We present a number of results on how to generate such spoofing signals, while minimizing the signal magnitude. The resulting algorithms are evaluated through simulations along with theoretical proofs.
 <br />
-[<a href="pdfs/ACC_spoof.pdf" target=&ldquo;blank&rdquo;><i>ACC'18</i></a>] [<a href="pdfs/TAC_spoof.pdf" target=&ldquo;blank&rdquo;><i>TAC Submitted</i></a>]
+[<a href="pdfs/ACC_spoof.pdf" target=&ldquo;blank&rdquo;><i>ACC'18</i></a>] [<a href="pdfs/TAC_spoof.pdf" target=&ldquo;blank&rdquo;><i>TAC submitted</i></a>]
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-08, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-03-23, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
