--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>April &lsquo;21:</b> Accepted as a member of the 2020 cohort of the <a href="https://sites.google.com/view/rsspioneers2020/">RSS Pioneers Workshop</a>.</p>
+</li>
+
 <li><p><b>Febuary &lsquo;21:</b> Give a talk in <a href="https://mme.wsu.edu/">WSU School of Mechanical and Materials Engineering</a>.</p>
 </li>
 
