--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>April &lsquo;27:</b> Successfully defended my Ph.D. dissertation! Please watch <a href= "https://www.youtube.com/watch?v=0KrW3MDO2Pg">my virtual defense online</a>.</p>
+</li>
+
 <li><p><b>April &lsquo;21:</b> Accepted as a member of the 2020 cohort of the <a href="https://sites.google.com/view/rsspioneers2020/">RSS Pioneers Workshop</a>.</p>
 </li>
 
@@ -105,7 +108,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-22, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-04-28, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
