--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech, April 2020</p>
+<li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech,  &nbsp; August 2016 - April 2020</p>
 </li>
-<li><p>M.S. in Automation, Shanghai Jiao Tong University, March 2016</p>
+<li><p>M.S. in Automation, Shanghai Jiao Tong University, &nbsp; September 2013 - March 2016</p>
 </li>
-<li><p>B.S. in Automation, Huazhong University of Science and Technology, June 2013</p>
+<li><p>B.S. in Automation, Huazhong University of Science and Technology, &nbsp; September 2009 - June 2013</p>
 </li>
 </ul>
 <!-- <h2>Research</h2>
@@ -73,6 +73,9 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <div class="blockcontent">
 <h2>Recent News</h2>
 <ul>
+
+<li><p><b>May &lsquo;05:</b> Our <a href= "https://arxiv.org/pdf/2003.13896.pdf">paper</a>  on robust team orienteering was accepted by <a href= "https://roboticsconference.org/">Robotics: Science and Systems, 2020</a>.</p>
+</li>
 
 <li><p><b>April &lsquo;27:</b> Successfully defended my Ph.D. dissertation! Please watch <a href= "https://www.youtube.com/watch?v=0KrW3MDO2Pg">my virtual defense online</a>.</p>
 </li>
