--- a/publications.html
+++ b/publications.html
@@ -151,7 +151,7 @@ year = {2019},
 </li>
 
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. Note: submitted. </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. <i>Robotics: Science and Systems (RSS'20)</i>. Note: accepted. </p>
 </li>
 
 
