--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
-<li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility”. 
+<li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility,” <i> Autonomous Robots (AURO)</i>. Note: submitted.
 </p>
 </li>
 
