--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/lifeng_bio.jpeg" alt="alt text" width="140px" height="170px" />&nbsp;</td>
-<td align="left"><p>Ph.D. Candidate,<br /> <a href="https://ece.vt.edu/">Bradley Department of Electrical and Computer Engineering</a>, <br /><a href="https://vt.edu/">Virginia Tech</a><br />
+<td align="left"><p>Ph.D., <a href="https://ece.vt.edu/">ECE</a>, <a href="https://vt.edu/">Virginia Tech</a><br />
 621 Whittemore Hall, Virginia Tech, <br />
 Blacksburg, VA 24061, USA <br /> 
 
@@ -38,7 +38,7 @@ Blacksburg, VA 24061, USA <br />
 E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. candidate at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+<p>I recently received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
 
 <br />
 <br>
@@ -48,7 +48,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech,  &nbsp; August 2016 - April 2020</p>
+<li><p>Ph.D. in Electrical &amp; Computer Engineering, Virginia Tech,  &nbsp; August 2016 - May 2020</p>
 </li>
 <li><p>M.S. in Automation, Shanghai Jiao Tong University, &nbsp; September 2013 - March 2016</p>
 </li>
@@ -111,7 +111,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-28, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
