update IROS accept

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/pdf/2003.11675.pdf"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and <br />  <a href= "https://arxiv.org/pdf/1910.01917.pdf"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
+</li>
+
 <li><p><b>May &lsquo;05:</b> Our <a href= "https://arxiv.org/pdf/2003.13896.pdf">paper</a>  on robust team orienteering was accepted by <a href= "https://roboticsconference.org/">Robotics: Science and Systems, 2020</a>.</p>
 </li>
 
@@ -111,7 +114,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
