--- a/publications.html
+++ b/publications.html
@@ -143,20 +143,20 @@ year = {2019},
 <h2>Conference Papers</h2>
 <ol>
 
-<li><p>V. D. Sharma*, M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Planning and Assignment for Ground Vehicles using Uncertain Perception from Aerial Vehicles”. Note: submitted. <a href="pdfs/IROS20risk_dl.pdf">[PDF].</a> </p>
+<li><p>V. D. Sharma*, M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Planning and Assignment for Ground Vehicles using Uncertain Perception from Aerial Vehicles”. <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20risk_dl.pdf">[PDF].</a> Note: accepted. </p>
 </li>
 
 
-<li><p>R. K. Ramachandran, <b>L. Zhou</b>, J. A. Preiss, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”. Note: submitted. <a href="pdfs/IROS20_resilient.pdf">[PDF].</a> </p>
+<li><p>R. K. Ramachandran, <b>L. Zhou</b>, J. A. Preiss, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”. <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20_resilient.pdf">[PDF].</a> Note: accepted. </p>
 </li>
 
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. <i>Robotics: Science and Systems (RSS'20)</i>. Note: accepted. </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. <i>Robotics: Science and Systems (RSS'20)</i>. <a href="pdfs/RSS20_resilient.pdf">[PDF].</a> Note: accepted. </p>
 </li>
 
 
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="pdfs/dis_robust.pdf">[PDF]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>. Note: accepted. 
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="pdfs/dis_robust.pdf">[PDF]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>. 
 </p>
 </li>
 
@@ -239,7 +239,7 @@ year = {2019},
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-23, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
