--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="bibtex.css" type="text/css" />
 <title>Publications </title>
-<!-- <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> -->
+<!-- <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&hl=en&authuser=2&oi=sra">[Google Scholar]</a> -->
 <script type="text/javascript">
 <!--
 // Toggle Display of BibTeX
@@ -42,18 +42,25 @@ function toggleBibtex(articleid) {
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Publications </h1>
-<!-- <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> -->
+<h1>Publications &nbsp &nbsp <font size="4"> <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&hl=en&oi=sra">[Google Scholar]</a> </font> </h1> 
 </div>
 <h2>Journal Papers</h2>
 <ol>
 
-
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. 
+<li><p>J. Liu, <b>L. Zhou</b>, P. Tokekar, and R. K. Williams, “Distributed Resilient Submodular Action Selection in Adversarial Environments”. Note: submitted.
 </p>
 </li>
 
-<li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility,” <i> Autonomous Robots (AURO)</i>. Note: submitted.
+<li><p><b>L. Zhou</b> and P. Tokekar, “Multi-Robot Coordination and Planning in Uncertain and Adversarial Environments,” <i>Current Robotics Reports, Springer</i>. Note: to appear. <a href="pdfs/2021_robot_report.pdf">[PDF]</a>
+</p>
+</li>
+
+
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. Note: submitted. 
+</p>
+</li>
+
+<li><p>Z. Zhang, J.Lee, JM Smereka, <b>L. Zhou</b>, Y. Sung, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility,” <i> Autonomous Robots (AURO)</i>. Note: to appear.
 </p>
 </li>
 
@@ -143,15 +150,23 @@ year = {2019},
 <h2>Conference Papers</h2>
 <ol>
 
-<li><p>V. D. Sharma*, M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Planning and Assignment for Ground Vehicles using Uncertain Perception from Aerial Vehicles”. <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20risk_dl.pdf">[PDF].</a> Note: accepted. </p>
+
+
+<li><p>S. Mayya, R. K. Ramachandran <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
+</li>
+
+<li><p>G. Shi, I. E. Rabban <b>L. Zhou</b>, and P. Tokekar, “<a href="https://arxiv.org/abs/2011.01476">Communication-Aware Multi-robot Coordination with Submodular Maximization</a>”, <i>IEEE International Conference on Robotics and Automation (ICRA'21)</i>. <a href="pdfs/ICRA21_comm_sub.pdf">[PDF].</a> Note: accepted. </p>
+</li>
+
+<li><p>V. D. Sharma*, M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Planning and Assignment for Ground Vehicles using Uncertain Perception from Aerial Vehicles”, <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20risk_dl.pdf">[PDF].</a> </p>
 </li>
 
 
-<li><p>R. K. Ramachandran, <b>L. Zhou</b>, J. A. Preiss, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”. <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20_resilient.pdf">[PDF].</a> Note: accepted. </p>
+<li><p>R. K. Ramachandran, <b>L. Zhou</b>, J. A. Preiss, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”, <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'20)</i>. <a href="pdfs/IROS20_resilient.pdf">[PDF].</a> </p>
 </li>
 
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. <i>Robotics: Science and Systems (RSS'20)</i>. <a href="pdfs/RSS20_resilient.pdf">[PDF].</a> Note: accepted. </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”, <i>Robotics: Science and Systems (RSS'20)</i>. <a href="pdfs/RSS20_resilient.pdf">[PDF].</a> </p>
 </li>
 
 
@@ -239,7 +254,7 @@ year = {2019},
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-12, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
