--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ E-mail: <i>lfzhou</i> @ seas.upenn.edu</p>
 
 My research focuses on enabling security, trustworthiness, and
 long-term autonomy in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate multi-robot security and trustworthy autonomy when robots use data-driven machine learning and deep learning techniques. <a href="research.html">Find out more</a>.
+
+<br />
+<br>
+
+I also share common interest with my partner, Tiantian, in the areas of Food Science & Agriculture. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
+
+
 </p>
 <h2>Education</h2>
 <ul>
@@ -73,6 +80,9 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <div class="blockcontent">
 <h2>Recent News</h2>
 <ul>
+
+<li><p><b>Feb &lsquo;28:</b> Our paper on <a href= "https://arxiv.org/abs/2011.01476"> maximizing submodular objective while guaranteeing the connectivity of robot teams </a> <br /> was accepted for publication in <a href= "http://www.icra2021.org/">ICRA 2021</a>.</p>
+</li>
 
 <li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/pdf/2003.11675.pdf"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and <br />  <a href= "https://arxiv.org/pdf/1910.01917.pdf"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
 </li>
@@ -114,7 +124,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-11, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-12, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
