--- a/publications.html
+++ b/publications.html
@@ -155,6 +155,10 @@ year = {2019},
 <li><p>S. Mayya, R. K. Ramachandran <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
 </li>
 
+<li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “<a href="https://arxiv.org/abs/2011.01095"> Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem</a>”. Note: submitted. </p>
+</li>
+
+
 <li><p>G. Shi, I. E. Rabban <b>L. Zhou</b>, and P. Tokekar, “<a href="https://arxiv.org/abs/2011.01476">Communication-Aware Multi-robot Coordination with Submodular Maximization</a>”, <i>IEEE International Conference on Robotics and Automation (ICRA'21)</i>. <a href="pdfs/ICRA21_comm_sub.pdf">[PDF].</a> Note: accepted. </p>
 </li>
 
