--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ long-term autonomy in robotics and autonomous systems. I have worked in related 
 <br />
 <br>
 
-I also share common interest with my partner, Tiantian, in the areas of Food Science & Agriculture. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
+I also share common interest with my partner, Tiantian, in the areas of Agriculture & Food Science. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
 
 
 </p>
