--- a/publications.html
+++ b/publications.html
@@ -152,7 +152,7 @@ year = {2019},
 
 
 
-<li><p>S. Mayya, R. K. Ramachandran <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
+<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
 </li>
 
 <li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “<a href="https://arxiv.org/abs/2011.01095"> Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem</a>”. Note: submitted. </p>
