--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,9 @@ function toggleBibtex(articleid) {
 <h2>Journal Papers</h2>
 <ol>
 
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. Note: submitted. </p>
+</li>
+
 <li><p>J. Liu, <b>L. Zhou</b>, P. Tokekar, and R. K. Williams, “Distributed Resilient Submodular Action Selection in Adversarial Environments”. Note: submitted.
 </p>
 </li>
