--- a/publications.html
+++ b/publications.html
@@ -50,11 +50,11 @@ function toggleBibtex(articleid) {
 <li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. Note: submitted. </p>
 </li>
 
-<li><p>J. Liu, <b>L. Zhou</b>, P. Tokekar, and R. K. Williams, “Distributed Resilient Submodular Action Selection in Adversarial Environments”. Note: submitted.
+<li><p>J. Liu, <b>L. Zhou</b>, P. Tokekar, and R. K. Williams, “Distributed Resilient Submodular Action Selection in Adversarial Environments,” <i>IEEE Robotics and Automation Letters (RA-L)</i>. Note: to appear.
 </p>
 </li>
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Multi-Robot Coordination and Planning in Uncertain and Adversarial Environments,” <i>Current Robotics Reports, Springer</i>. Note: to appear. <a href="pdfs/2021_robot_report.pdf">[PDF]</a>
+<li><p><b>L. Zhou</b> and P. Tokekar, “Multi-Robot Coordination and Planning in Uncertain and Adversarial Environments,” <i>Current Robotics Reports, Springer</i>. <a href="pdfs/2021_robot_report.pdf">[PDF]</a>
 </p>
 </li>
 
@@ -63,7 +63,7 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
-<li><p>Z. Zhang, J.Lee, JM Smereka, <b>L. Zhou</b>, Y. Sung, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility,” <i> Autonomous Robots (AURO)</i>. Note: to appear.
+<li><p>Z. Zhang, J.Lee, JM Smereka, <b>L. Zhou</b>, Y. Sung, and P. Tokekar, “<a href="https://link.springer.com/article/10.1007/s10514-020-09963-4">Game Tree Search for Minimizing Detectability and Maximizing Visibility</a>,” <i> Autonomous Robots (AURO)</i>.
 </p>
 </li>
 
