--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ I also share common interest with my partner, Tiantian, in the areas of Agricult
 <li><p><b>April &lsquo;26:</b> Our paper on distributed resilient submodular action selection </a> was accepted for publication in <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7083369">IEEE Robotics and Automation Letters (RA-L)</a>.</p>
 </li>	
 
-<li><p><b>Feb &lsquo;28:</b> Our paper on <a href= "https://arxiv.org/abs/2011.01476"> maximizing submodular objective while guaranteeing the connectivity of robot teams </a> <br /> was accepted for publication in <a href= "http://www.icra2021.org/">ICRA 2021</a>.</p>
+<li><p><b>Feb &lsquo;28:</b> Our paper on <a href= "https://arxiv.org/abs/2011.01476"> maximizing submodular objective while guaranteeing the connectivity of robot teams </a>  was accepted for publication in <a href= "http://www.icra2021.org/">ICRA 2021</a>.</p>
 </li>
 
-<li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/pdf/2003.11675.pdf"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and <br />  <a href= "https://arxiv.org/pdf/1910.01917.pdf"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
+<li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/pdf/2003.11675.pdf"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and  <a href= "https://arxiv.org/pdf/1910.01917.pdf"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
 </li>
 
 <li><p><b>May &lsquo;05:</b> Our <a href= "https://arxiv.org/pdf/2003.13896.pdf">paper</a>  on robust team orienteering was accepted by <a href= "https://roboticsconference.org/">Robotics: Science and Systems, 2020</a>.</p>
