--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@ function toggleBibtex(articleid) {
 </li>
 
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (TRO)</i>. Note: submitted. <a href="pdfs/TRO20_risk.pdf">[PDF]</a>
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination”. Note: submitted. <a href="pdfs/TRO20_risk.pdf">[PDF]</a>
 </p>
 </li>
 
@@ -155,7 +155,7 @@ year = {2019},
 
 
 
-<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
+<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “<a href=https://arxiv.org/abs/2105.03813> Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams</a>”. Note: submitted. </p>
 </li>
 
 <li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “<a href="https://arxiv.org/abs/2011.01095"> Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem</a>”. Note: submitted. </p>
