--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,17 @@ function toggleBibtex(articleid) {
 <ol>
 
 
+<li><p><b>L. Zhou</b>, V. D. Sharma, Q. Li, A. Prorok, A.
+  Ribeiro, and V. Kumar, “Graph Neural Networks for Decentralized Multi-Robot Submodular Action
+  Selection”. <a href="http://arxiv.org/abs/2105.08601">[arXiv]</a> 
+</p>
+</li>
+
 <li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>”. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
+</li>
+
+<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams”. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
+</p> 
 </li>
 
 <li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
@@ -65,9 +75,6 @@ function toggleBibtex(articleid) {
 </p> 
 </li>
 
-<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams”. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
-</p> 
-</li>
 
 <li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem”. <a href="https://arxiv.org/abs/2011.01095">[arXiv]</a> 
 </p>
