--- a/publications.html
+++ b/publications.html
@@ -76,9 +76,6 @@ function toggleBibtex(articleid) {
 </li>
 
 
-<li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem”. <a href="https://arxiv.org/abs/2011.01095">[arXiv]</a> 
-</p>
-</li>
 
 
 </li>
@@ -177,6 +174,10 @@ year = {2019},
 
 <h2>Conference Papers</h2>
 <ol>
+
+<li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem,”  <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'21)</i>. <a href="https://arxiv.org/abs/2011.01095">[arXiv]</a> 
+</p>
+</li>
 
 
 <li><p>G. Shi, I. E. Rabban <b>L. Zhou</b>, and P. Tokekar, “Communication-Aware Multi-robot Coordination with Submodular Maximization,” <i>IEEE International Conference on Robotics and Automation (ICRA'21)</i>. <a href="https://arxiv.org/abs/2011.01476">[arXiv]</a>
