--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ I also share common interest with my partner, Tiantian, in the areas of Agricult
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>June &lsquo;30:</b> Our paper on <a href="https://arxiv.org/abs/2011.01095">Risk-Aware Submodular Optimization for Stochastic TSP</a> was accepted for publication in <a href= "https://www.iros2021.org/">IROS 2021</a>.</p>
+</li>	
+
 <li><p><b>April &lsquo;26:</b> Our paper on <a href="http://raaslab.org/pubs/liu2021distributed.pdf">distributed resilient submodular action selection</a> was accepted for publication in <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7083369">IEEE Robotics and Automation Letters (RA-L)</a>.</p>
 </li>	
 
