--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,11 @@ function toggleBibtex(articleid) {
 <ol>
 
 
+<li><p><b>L. Zhou</b> and V. Kumar, “Robust Multi-Robot Active Target Tracking Against Sensing and Communication Attacks”. <a href="https://arxiv.org/abs/2109.09838">[arXiv]</a> 
+</p>
+</li>
+
+
 <li><p><b>L. Zhou</b>, V. D. Sharma, Q. Li, A. Prorok, A.
   Ribeiro, and V. Kumar, “Graph Neural Networks for Decentralized Multi-Robot Submodular Action
   Selection”. <a href="http://arxiv.org/abs/2105.08601">[arXiv]</a> 
@@ -197,7 +202,7 @@ year = {2019},
 
 
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href=https://ieeexplore.ieee.org/document/9197243>Attack-Robust Submodular Maximization for Multi-Robot Planning </a>,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href=https://ieeexplore.ieee.org/document/9197243>Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning </a>,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>
 </p>
 </li>
 
