--- a/index.html
+++ b/index.html
@@ -38,18 +38,17 @@ Philadelphia, PA, USA <br />
 E-mail: <i>lfzhou</i> @ seas.upenn.edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Researcher in the GRASP Lab at the University of Pennsylvania working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="http://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+<p>I am a Postdoctoral Researcher in the GRASP Lab at the University of Pennsylvania, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
 
 <br />
 <br>
 
-My research focuses on enabling security, trustworthiness, and
-long-term autonomy in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate multi-robot security and trustworthy autonomy when robots use data-driven machine learning and deep learning techniques. <a href="research.html">Find out more</a>.
+My research focuses on enabling security, trustworthiness, and long-term autonomy in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate secure, reliable, and scalable multi-robot autonomy when robots use data-driven machine learning techniques. I am especially interested in how collaborative intelligence and learning paradigms can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
 
 <br />
 <br>
 
-I also share common interest with my partner, Tiantian, in the areas of Agriculture & Food Science. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
+I also share a common interest with my partner, Tiantian, in the areas of Agriculture & Food Science. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
 
 
 </p>
@@ -130,7 +129,7 @@ I also share common interest with my partner, Tiantian, in the areas of Agricult
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-11, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
