--- a/publications.html
+++ b/publications.html
@@ -197,7 +197,7 @@ year = {2019},
 
 
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href=https://ieeexplore.ieee.org/document/9197243>Attack-Robust Submodular Maximization for Multi-Robot Planning </a>,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href=https://ieeexplore.ieee.org/document/9197243>Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning </a>,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>
 </p>
 </li>
 
