--- a/teaching.html
+++ b/teaching.html
@@ -28,15 +28,27 @@
 </div>
 <p>
 My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p>
+
+<h2>Instructor</h2>
+Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
+The GRASP Lab, University of Pennsylvania
+
 <h2>Guest Lecturer</h2>
-<b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
-<b>December 2019</b>, Student Presentation Organization <br>
-CMSC 818B: Decision-Making for Robotics<br>
-Dept. of Computer Science, University of Maryland, College Park, USA 
+<!-- <b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
+<b>December 2019</b>, Student Presentation Organization <br> -->
+CMSC 818B: Decision-Making for Robotics, Fall 2019<br>
+Dept. of Computer Science, University of Maryland
+<br>
+<br>
+ECE 4984/5984: (Advanced) Robot Motion Planning, Fall 2018<br>
+Dept. of Electrical & Computer Engineering, Virginia Tech
 
 <h2>Teaching Assistant</h2>
-<b>Fall 2016</b>, ECE 4405: Control Systems<br>
-Dept. of Electrical & Computer Engineering, Virginia Tech, Blacksburg, USA 
+ ECE 4405: Control Systems, Fall 2016<br>
+Dept. of Electrical & Computer Engineering, Virginia Tech
+
+<h2>Mentor</h2>
+I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018. 
 
 <div id="footer">
 <div id="footer-text">
