--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ Philadelphia, PA, USA <br />
 E-mail: <i>lfzhou</i> @ seas.upenn.edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Researcher in the GRASP Lab at the University of Pennsylvania, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+<p>I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
 
 <br />
 <br>
 
-My research focuses on enabling security, trustworthiness, and long-term autonomy in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate secure, reliable, and scalable multi-robot autonomy when robots use data-driven machine learning techniques. I am especially interested in how collaborative intelligence and learning paradigms can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
+My research focuses on enabling <b>security, trustworthiness, and long-term autonomy</b> in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate <b>secure, reliable, and scalable multi-robot autonomy</b> when robots use data-driven machine learning techniques. I am especially interested in how <b>collaborative intelligence and learning paradigms</b> can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
 
 <br />
 <br>
@@ -80,6 +80,10 @@ I also share a common interest with my partner, Tiantian, in the areas of Agricu
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
+</li> 
+
+
 <li><p><b>June &lsquo;30:</b> Our paper on <a href="https://arxiv.org/abs/2011.01095">Risk-Aware Submodular Optimization for Stochastic TSP</a> was accepted for publication in <a href= "https://www.iros2021.org/">IROS 2021</a>.</p>
 </li>	
 
@@ -98,20 +102,20 @@ I also share a common interest with my partner, Tiantian, in the areas of Agricu
 <li><p><b>April &lsquo;27:</b> Successfully defended my Ph.D. dissertation! Please watch <a href= "https://www.youtube.com/watch?v=0KrW3MDO2Pg">my virtual defense online</a>.</p>
 </li>
 
-<li><p><b>April &lsquo;21:</b> Accepted as a member of the 2020 cohort of the <a href="https://sites.google.com/view/rsspioneers2020/">RSS Pioneers Workshop</a>.</p>
+<li><p><b>April &lsquo;21:</b> I was accepted as a member of the 2020 cohort of the <a href="https://sites.google.com/view/rsspioneers2020/">RSS Pioneers Workshop</a>.</p>
 </li>
 
-<li><p><b>Febuary &lsquo;21:</b> Give a talk in <a href="https://mme.wsu.edu/">WSU School of Mechanical and Materials Engineering</a>.</p>
+<li><p><b>Febuary &lsquo;21:</b> I gave a talk in <a href="https://mme.wsu.edu/">WSU School of Mechanical and Materials Engineering</a>.</p>
 </li>
 
-<li><p><b>Febuary &lsquo;07:</b> Give a talk in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">WPI Robotics Engineering</a>.</p>
+<li><p><b>Febuary &lsquo;07:</b> I gave a talk in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">WPI Robotics Engineering</a>.</p>
 </li>
 
 <li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
 </li>
 
 
-<li><p><b>July &lsquo;19:</b> Give a talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>.</p>
+<li><p><b>July &lsquo;19:</b> I gave a talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>.</p>
 </li>
 
 
